# pmgap

./: .gitignore  Makefile.am  Makefile.in  PackageInfo.g  README.md  configure  configure.ac  init.g  makedoc.g  read.g  rereadall.g
demos/: Makefile.am  README.md  interval_approx_example_2by6.json  pmgap_demo_interval_approximation.g  pmgap_timing_all_interval_approximation.g  pmgap_timing_interval_approximation.g  timer.g
doc/: pmgap.bib
gapscripts/: bunkai-ron.g  compression.g  indec_creator.g  repnio.g  testrepn.json
lib/: 000.autodoc  approximation.gd  approximation.gi  bunkai-ron.g  commgrid.gd  commgrid.gi  commgridrepn.gd  commgridrepn.gi  commutative_grid_repn.g  compressedmultiplicityver2.gi  compressedmultiplicityver2list.gi  homalg.gd  homalg.gi  indec_creator.g  intervals.gd  intervals.gi  intervalsapproximation-cmv2.gi  intervalsapproximation.gd  intervalsapproximation.gi  loader.g  multiplicity.gd  multiplicity.gi  utils.gd  utils.gi
m4/: find_gap.m4
src/: Makefile.am  cmplx2repn.cpp  generate_intervals.g  gridcomplex_sample.json  helloworld.cpp  loader.g  pmgap_batch_interval_decomposable.in  pmgap_cmplx2repn.cpp  pmgap_from_homcloud_random_cech.py  pmgap_generate_intervals.in  pmgap_interval_approximation.in  pmgap_interval_decomposable.in
src/lib/: Makefile.am  gridbirthtype.cpp  gridbirthtype.h  gridcell.h  gridcomplex.cpp  gridcomplex.h  setchain.cpp  setchain.h  slicedhomology.cpp  slicedhomology.h  test_gridbirthtype.cpp  test_gridcomplex.cpp  test_gridslice.cpp  test_setchain.cpp  test_slicedhomology.cpp  test_z2.cpp  test_z2matrix.cpp  z2.cpp  z2.h  z2matrix.cpp  z2matrix.h  z2traits.h
tst/: 001_pmgap_repn.json  002_pmgap_repn.json  BuchetConstructionExample.json  Makefile.am  test_commgrid.tst  test_commgridrepn.tst  test_compressedmultiplicityver2.tst  test_homalg.tst  test_intervals.tst  test_load.tst  test_multiplicity.tst  test_utils.tst  testall.g  testall_runner  testrepnF.json  testrepnL.json  testrepnR.json
